# mesadelivros

./: .gitignore  Pipfile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: models.py  urls.py  views.py
accounts/templates/accounts/: cadcateg.html  cadlivro.html  dashboard.html  login.html  password_reset.html  register.html  userform.html
apps/accounts/: models.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_remove_user_full_name_user_first_name_user_last_name.py
apps/books/: admin.py  forms.py  models.py  views.py
apps/books/migrations/: 0001_initial.py  0002_remove_livro_nome_remove_livro_sobrenome_livro_autor.py
core/: urls.py
core/settings/: base.py  develop.py
staticfiles/: staticfiles.json
templates/: base.html
templates/apps/accounts/: dashboard.html  login.html  password_reset.html  register.html  userform.html
templates/apps/books/: altlivro.html  cadcateg.html  cadlivro.html  detail.html  index.html  (+1 more)
templates/includes/: _head.html  _messages.html  _nav.html
templates/partials/: _head.html  _nav.html
utils/: gendotenv-example.py
webapp/: asgi.py  home_view.py  settings.py  urls.py  wsgi.py
webapp/settings/: .env-example  base.py  local.py  production.py
website/: admin.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_auto_20210215_0804.py  0002_livro_imagem.py  0003_auto_20210205_1004.py  0003_auto_20210712_1036.py  0004_auto_20210205_1007.py  0005_auto_20210205_1019.py  0006_auto_20210205_1028.py  0007_auto_20210209_1615.py  0008_auto_20210210_0859.py
(+4 files in other folders)
